# helix-agent-swarm

./: .dockerignore  .env  .env.example  .gitignore  Archive_Master.txt  Blackbox_001echoes.txt  Dockerfile  Helix_Codex_v12_2_Overview.txt  LICENSE  NexusSync_v1.6_Grok3ToAll (3).json  PHASE_1_INTEGRATION_REPORT.md  PHASE_1_INTEGRATION_REPORT_FINAL.md  README.md  Samsara_Helix_Codex_v12.3+.pdf - Google Drive  Samsara_Helix_Codex_v12.3+_Sync_Packets (1).json  Samsara_Helix_Codex_v13.4_OmegaZero.json  Samsara_Helix_Codex_v13_Summary.json  Samsara_Helix_Master_v12.3+.txt  Samsara_Helix_Master_v12.3+_handshake.json  Work _250920_162755.txt  agents.py  discord_bot_manus.py  helix_multi_model_chat.py  pyproject.toml  railway.toml  requirements.txt  setup.py  ucf_events_csv.txt  ucf_repo_master_codex.txt
Helix/: ritual_scheduler.py  ucf_monitor.py  z88_ritual_engine.py
Helix/state/: hallucination_memory.json  ritual_diary.txt  ritual_folklore.json
Shadow/manus_archive/: discord_bridge_log.json
agent_capabilities/: __init__.py  memory_system.py  multimodal.py  tool_framework.py
agents/: __init__.py  agent_access.py  agent_embeds.py  agent_orchestrator.py  agent_personality_profiles.py  agent_profiles.py  agents_base.py  agents_loop.py  agents_service.py  enhanced_agents.py  memory_root.py  verify_blueprints.py
docs/: index.html
helix_agent_swarm/: __init__.py  agent_factory.py  agent_registry.py  api_routes.py  helix_collective.py  helix_communication.py  helix_conscious_agent.py  helix_memory.py  helix_orchestrator.py  multi_ai_consensus.py  saas_agents.py
(+8 files in other folders)
